# python-project-template

./: .env  .envrc  .gitattributes  .pre-commit-config.yaml  .pylintrc  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
big_business/tests/: test_big_business.py
scripts/: README.md  docker-lint.sh  docker-run.sh  lint.sh
