[tool.poetry]
name = "big-business"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
pytest = "^7.1.2"
mypy = "^0.971"
bandit = {extras = ["toml"], version = "^1.7.4"}
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
atomic = true

[tool.black]
line-length = 120

[tool.mypy]
strict = true

[tool.bandit]
exclude_dirs = ["*/test_*.py"]
